--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@ body {
   position: relative;
   overflow: hidden;
   height: 100vh;
-  width: 100vh;
+  width: 100vw;
 }
 
 .slide {
@@ -51,24 +51,26 @@ body {
 
 .slide.current .content {
   opacity: 1;
-  transform: translatex(600px);
+  transform: translateX(600px);
   transition: all 0.7s ease-in-out 0.3s;
 }
 
 .buttons button#next {
   position: absolute;
-  top: 50%;
+  top: 40%;
   right: 15px;
 }
+
 .buttons button#prev {
   position: absolute;
-  top: 50%;
+  top: 40%;
   left: 15px;
 }
 
 .buttons button {
   border: 2px solid #fff;
   background-color: transparent;
+  color: #fff;
   cursor: pointer;
   padding: 13px 15px;
   border-radius: 50%;
